BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call_Error_vod__c.object
<CustomObject>
    <description>This is a temporary holding object for failed synchronization messages from the mobile client.  The messages will be accepted or rejected by an administrator.</description>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>ID of the account related to the call that had the error. Updated by the synchronization process.</description>
        <label>Account</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Datetime_vod__c</fullName>
        <description>Datetime of the Call that had the error.  This corresponds to the Call Datetime field on the Call object. Updated by the synchronization process.</description>
        <label>Call Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Type_vod__c</fullName>
        <description>Type of the Call that had the error.  This corresponds to the Call Type field on the Call object. Updated by the synchronization process.</description>
        <label>Call Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cause_vod__c</fullName>
        <description>This field indicates the reason the call synchronization failed. Updated by the synchronization process.</description>
        <label>Cause</label>
        <picklist>
            <picklistValues>
                <fullName>Account Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Object Access</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who submitted the call that had the error. Updated by the synchronization process.</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00NE0000003y0S7MAI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>XML_Text_vod__c</fullName>
        <description>The mobile synchronization message that caused the error. Updated by the synchronization process.</description>
        <label>XML Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Interaction Error</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllCallErrors</fullName>
        <columns>NAME</columns>
        <columns>Cause_vod__c</columns>
        <columns>User_vod__c</columns>
        <columns>Call_Type_vod__c</columns>
        <columns>Call_Datetime_vod__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Call Errors</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IE{MM}{DD}{YYYY}{000000}</displayFormat>
        <label>Interaction Error Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interaction Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>